--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -3,3 +3,20 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 4fr 4fr 2fr 3fr;
+    grid-template-areas: 
+    "header header"
+    "section section"
+    "section section"
+    "section section"
+    "footer footer";
+   
+    height: 100vh;
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 500;
+    
+}
