--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+.body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 4fr 4fr 2fr 3fr;
@@ -20,3 +20,14 @@ body {
     font-weight: 300;
     
 } 
+.titulo{
+    display: grid;
+    grid-area: titulo;
+    position: relative;
+    left: 1000px;
+    top: 10px;
+}
+.sección1{
+    display: grid;
+    grid-area: sección1;
+}
