--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -1,7 +1,8 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Barlow Semi Condensed", sans-serif;
 }
 
 /*COLORES*/
@@ -13,16 +14,13 @@
 --Moderate-Cyan: hsl(170, 45%, 43%);
 --Light-Grayish-Blue: hsl(240, 75%, 98%);
 --Light-Gray: hsl(0, 0%, 75%);
-
 }
 
 .body {
     /* height: 100vh; */
-    font-family: "Barlow Semi Condensed", sans-serif;
     font-weight: 300;
     
 } 
-
 .title {
     display: grid;
     grid-area: titulo;
@@ -30,66 +28,40 @@
     top: 10px; */
 }
 .section-1 {
-    display: grid;
-    grid-area: sección1;
+        background-color: var(--Light-Grayish-Blue);
+        align-items: center;
 } 
-
 .section-2 {    
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
     background-color: var(--Light-Grayish-Blue);
     align-items: center;
-    /* gap: 60px;
-    padding: 40px; */
     
 }
 .section-3{
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
     background-color: var(--Desaturated-Blue);
     color: var(--Light-Grayish-Blue);
-    height: 15em;
     padding: 70px;
-}
-.sub-container-s3-c1{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-
-
 }
 input {
     border: none;
     padding: 5px 80px;
     font-size: 1rem;
   }
-
   button{
-
     background-color: var(--Bright-Blue);
     color: var(--Light-Grayish-Blue);
     font-weight: bold;
-    height: 5rem;
+    height: 2.2rem;
     padding: 5px 80px;
   }
-   
-   
-  
-
-
-
 h1 {
     font-size: 25px;
 }
-
 .link {
     color: var(--Moderate-Cyan);
     font-size: 16px;
     margin-bottom: 40px;
     display: inline-block;
-    
 }
-
 .sub-container-s2-c2 {
     background-color: white;
     width: 25em;
@@ -98,34 +70,19 @@ h1 {
     border-radius: 10px;
     justify-content: center;
     gap: 10px;
-    
 }
-
-.cita {
-    padding: 5px;
-
-}
-
-.comillas {
-    padding: 5px;
-}
-
 .Kyle-Pic {
     width: 40px;
     border-radius: 40px;
-
 }
 
 .Kyle {
     font-size: 1rem;
     text-align: right;
-
 }
 
 .contenido {
     max-width: 500px;
-    
-    
 }
 
 .ilustration {
@@ -136,6 +93,13 @@ h1 {
 
 @media screen and (min-width: 375px) {
 
+body {
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+
+    }
+
 .section-2 {   
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -145,11 +109,12 @@ h1 {
     "sub-container-s2-c2 sub-container-s2-c3";
 }
 
-body {
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    
+.section-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "sub-container-s3-c1 sub-container-s3-c2"
 }
 
 .sub-container-s2-c1 {
@@ -157,11 +122,19 @@ body {
     display:grid;
 }
 .sub-container-s2-c2 {
-    grid-area: sub-container-s2-c1;
+    grid-area: sub-container-s2-c2;
     display: grid;
 }
 .sub-container-s2-c3 {
-    grid-area: sub-container-s2-c1;
+    grid-area: sub-container-s2-c3;
     display: grid;
 }
- } 
+.sub-container-s3-c1 {
+    grid-area: sub-container-s3-c1;
+    display: grid;
+}
+.sub-container-s3-c2 {
+    grid-area: sub-container-s3-c2;
+    display: grid;
+}
+}
