--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -117,24 +117,37 @@ body {
     "sub-container-s3-c1 sub-container-s3-c2"
 }
 
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "footer-s1 footer-s2 footer-s3"
+}
+
 .sub-container-s2-c1 {
     grid-area: sub-container-s2-c1;
-    display:grid;
 }
 .sub-container-s2-c2 {
     grid-area: sub-container-s2-c2;
-    display: grid;
 }
 .sub-container-s2-c3 {
     grid-area: sub-container-s2-c3;
-    display: grid;
 }
 .sub-container-s3-c1 {
     grid-area: sub-container-s3-c1;
-    display: grid;
 }
 .sub-container-s3-c2 {
     grid-area: sub-container-s3-c2;
-    display: grid;
 }
+.footer-s1 {
+    grid-area: footer-s1;
+}
+.footer-s2 {
+    grid-area: footer-s2;
+}
+.footer-s3 {
+    grid-area: footer-s3;
+}
+
 }
