--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -25,7 +25,7 @@
     display: grid;
     grid-area: titulo;
     position: relative;
-    top: 10px; */
+    top: 10px; 
 }
 .section-1 {
         background-color: var(--Light-Grayish-Blue);
