--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -27,9 +27,9 @@
 
 
 .logo img{
-    
     width: 95%;
 }
+
 .buttons {
     display: grid;
     grid-template-columns: repeat(3, auto);
@@ -41,22 +41,25 @@
     border: none;
     padding: 10px 20px;
 }
+
 .section-1 {
-        padding: 20px;
-        background-color: white;
-        align-items: center;
+    padding: 20px;
+    background-color: white;
+    align-items: center;
 } 
+
 .section-2 {    
     padding: 20px;
     background-color: var(--Light-Grayish-Blue);
-    align-items: center;
-    
+    align-items: center;    
 }
+
 .section-3{
     background-color: var(--Desaturated-Blue);
     color: var(--Light-Grayish-Blue);
     padding: 20px;
 }
+
 input {
     padding: 5px;
     font-size: 1rem;
@@ -64,7 +67,7 @@ input {
     color: #D3D3D3;
     border-radius: 3px;
     border-color: #D3D3D3;
-  }
+}
 
 button {
     border: none;
@@ -73,21 +76,31 @@ button {
     height: 2.2rem;
     padding: 5px;
     border-radius: 3px;
-  }
+}
 
-  .buttons-header {
+.buttons-header {
     background-color: white;
     color: black;
-  }
+}
 
 h1 {
+    color: var(--Very-Dark-Blue);
     font-size: 25px;
     padding: 10px;
     font-weight: bold;
 }
 
+.section-3-h1 {
+    color: white;
+}
+
 p {
+    color: var(--Very-Dark-Blue);
     padding: 10px;
+}
+
+.section-3-p {
+    color: white;
 }
 
 a {
@@ -99,7 +112,25 @@ a {
     font-size: 16px;
     margin-bottom: 40px;
     display: inline-block;
+
 }
+
+.link:hover{
+    color: greenyellow;
+}
+
+.footer-s1:hover{
+    color: var(--Bright-Blue);
+}
+
+.footer-s2:hover{
+    color: var(--Bright-Blue);
+}
+
+.footer-s3:hover{
+    color: var(--Bright-Blue);
+}
+
 .sub-container-s2-c2 {
     background-color: white;
     width: 25em;
@@ -108,7 +139,9 @@ a {
     border-radius: 10px;
     justify-content: center;
     gap: 10px;
+    box-shadow: 3px 0px 20px -10px black;
 }
+
 .Kyle-Pic {
     width: 40px;
     border-radius: 40px;
@@ -123,17 +156,33 @@ a {
     max-width: 500px;
 }
 
-.illustration {
-    
+.illustration {    
     width: 100%;
     height: auto;
 }
+
 #image-curve-desktop {
     display: none;
 }
+
 #image-curve-mobile {
     display: block;
     width: 100%;
+}
+
+.footer-s1 {
+    color: white;
+    background-color: var(--Very-Dark-Blue);
+}
+
+.footer-s2 {
+    color: white;
+    background-color: var(--Very-Dark-Blue);
+}
+
+.footer-s3 {
+    color: white;
+    background-color: var(--Very-Dark-Blue);
 }
 
 @media screen and (min-width: 375px) {
@@ -158,80 +207,80 @@ body {
     }
 
 .section-1 {
-    padding: 70px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "sub-container-s1-c2 sub-container-s1-c1";
+        padding: 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "sub-container-s1-c2 sub-container-s1-c1";
 }
 
 .section-2 {  
-    padding: 70px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-    "sub-container-s2-c1 sub-container-s2-c3"
-    "sub-container-s2-c2 sub-container-s2-c3";
+        padding: 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        "sub-container-s2-c1 sub-container-s2-c3"
+        "sub-container-s2-c2 sub-container-s2-c3";
 }
 
 .section-3 {
-    padding: 70px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-    "sub-container-s3-c1 sub-container-s3-c2"
+        padding: 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        "sub-container-s3-c1 sub-container-s3-c2"
 }
 
 footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-    "footer-s1 footer-s2 footer-s3"
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        "footer-s1 footer-s2 footer-s3"
 }
 
 .sub-container-s1-c1 {
-    grid-area: sub-container-s1-c1;
+        grid-area: sub-container-s1-c1;
 }
 
 .sub-container-s1-c2 {
-    grid-area: sub-container-s1-c2;
+        grid-area: sub-container-s1-c2;
 }
 .sub-container-s2-c1 {
-    grid-area: sub-container-s2-c1;
+        grid-area: sub-container-s2-c1;
 }
 .sub-container-s2-c2 {
-    grid-area: sub-container-s2-c2;
+        grid-area: sub-container-s2-c2;
 }
 .sub-container-s2-c3 {
-    grid-area: sub-container-s2-c3;
+        grid-area: sub-container-s2-c3;
 }
 .sub-container-s3-c1 {
-    grid-area: sub-container-s3-c1;
+        grid-area: sub-container-s3-c1;
 }
 .sub-container-s3-c2 {
-    grid-area: sub-container-s3-c2;
+        grid-area: sub-container-s3-c2;
 }
 .footer-s1 {
-    grid-area: footer-s1;
+        grid-area: footer-s1;
 }
 .footer-s2 {
-    grid-area: footer-s2;
+        grid-area: footer-s2;
 }
 .footer-s3 {
-    grid-area: footer-s3;
+        grid-area: footer-s3;
 }
 
 #image-curve-desktop {
-    display: block;
-    width: 100%;
+        display: block;
+        width: 100%;
 }
 
 #image-curve-mobile {
-    display: none;
+        display: none;
 }
 
 }
