--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -1,3 +1,16 @@
+/*COLORES*/
+
+:root {
+    --Very-Dark-Blue: hsl(243, 87%, 12%);
+    --Desaturated-Blue: hsl(238, 22%, 44%);
+    --Bright-Blue: hsl(224, 93%, 58%);
+    --Moderate-Cyan: hsl(170, 45%, 43%);
+    --Light-Grayish-Blue: hsl(240, 75%, 98%);
+    --Light-Gray: hsl(0, 0%, 75%);
+}
+
+/* CUERPO */
+
 * {
     padding: 0;
     margin: 0;
@@ -6,55 +19,56 @@
     font-weight: 80;
 }
 
-/*COLORES*/
-
-:root {
---Very-Dark-Blue: hsl(243, 87%, 12%);
---Desaturated-Blue: hsl(238, 22%, 44%);
---Bright-Blue: hsl(224, 93%, 58%);
---Moderate-Cyan: hsl(170, 45%, 43%);
---Light-Grayish-Blue: hsl(240, 75%, 98%);
---Light-Gray: hsl(0, 0%, 75%);
-}
-
-.title{
-    display: grid;
-    grid-template-columns: auto 1fr;
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    max-width: 375px;
+    width: 100%;
+    padding: 10px 20px;
+    background-color: white;
 }
 
+.logo img {
+    width: 100px;
+}
 
-
-.logo img{
-    width: 95%;
+.logo {
+    display: flex;
+    align-items: center;
 }
 
 .buttons {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
+    display: flex;
     justify-self: end;
     gap: 10px;
-    margin-right: 70px;
 }
-.buttons button{
-    border: none;
-    padding: 10px 20px;
+
+.nav-links button {
+    background-color: white;
+    width: 50px;
+    gap: 20px;
+}
+
+.nav-links a {
+    font-size: 9px;
+    text-decoration: none;
+    color: rgb(69, 69, 69);
 }
 
 .section-1 {
     padding: 20px;
     background-color: white;
     align-items: center;
-} 
-
-.section-2 {    
-    padding: 20px;
-    background-color: var(--Light-Grayish-Blue);
-    align-items: center;    
 }
 
-.section-3{
+.section-2 {
+    padding: 20px;
+    background-color: var(--Light-Grayish-Blue);
+    align-items: center;
+}
+
+.section-3 {
     background-color: var(--Desaturated-Blue);
     color: var(--Light-Grayish-Blue);
     padding: 20px;
@@ -67,6 +81,7 @@ input {
     color: #D3D3D3;
     border-radius: 3px;
     border-color: #D3D3D3;
+    width: 300px;
 }
 
 button {
@@ -74,13 +89,9 @@ button {
     background-color: var(--Bright-Blue);
     color: var(--Light-Grayish-Blue);
     height: 2.2rem;
-    padding: 5px;
     border-radius: 3px;
-}
-
-.buttons-header {
-    background-color: white;
-    color: black;
+    margin: 5px;
+    width: 300px;
 }
 
 h1 {
@@ -112,29 +123,26 @@ a {
     font-size: 16px;
     margin-bottom: 40px;
     display: inline-block;
-
 }
 
-.link:hover{
+.link:hover {
     color: greenyellow;
 }
 
-.footer-s1:hover{
+.footer-s1:hover {
     color: var(--Bright-Blue);
 }
 
-.footer-s2:hover{
+.footer-s2:hover {
     color: var(--Bright-Blue);
 }
 
-.footer-s3:hover{
+.footer-s3:hover {
     color: var(--Bright-Blue);
 }
 
 .sub-container-s2-c2 {
     background-color: white;
-    width: 25em;
-    height: 15em;
     padding: 20px;
     border-radius: 10px;
     justify-content: center;
@@ -142,21 +150,11 @@ a {
     box-shadow: 3px 0px 20px -10px black;
 }
 
-.Kyle-Pic {
-    width: 40px;
-    border-radius: 40px;
-}
-
-.Kyle {
-    font-size: 1rem;
-    text-align: right;
-}
-
 .contenido {
     max-width: 500px;
 }
 
-.illustration {    
+.illustration {
     width: 100%;
     height: auto;
 }
@@ -170,117 +168,170 @@ a {
     width: 100%;
 }
 
-.footer-s1 {
-    color: white;
+footer {
     background-color: var(--Very-Dark-Blue);
 }
 
-.footer-s2 {
+footer a,
+footer span {
     color: white;
-    background-color: var(--Very-Dark-Blue);
+    text-decoration: none;
+    font-size: 10px;
+    padding: 5px 8px;
 }
 
-.footer-s3 {
-    color: white;
-    background-color: var(--Very-Dark-Blue);
+.profile-box {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.profile-pic {
+    width: 50px;
+    border-radius: 50%;
+}
+
+.profile-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-name {
+    font-size: 15px;
+    font-weight: bold;
+    padding: 2px 10px;
+}
+
+.profile-title {
+    font-size: 15px;
+    padding: 2px 10px;
 }
 
 @media screen and (min-width: 375px) {
+    .nav-bar {
+        max-width: none;
+        padding: 10px 20px;
+        background-color: white;
+    }
 
-.email-submit {
+    .nav-links button {
+        background-color: white;
+        width: 80px;
+        gap: 20px;
+    }
+
+    .nav-links a {
+        font-size: 13px;
+    }
+
+    .email-submit {
         width: 150px;
         margin: 5px;
     }
 
-.email-box  {
+    .email-box {
         display: block;
         width: 300px;
         margin: 5px;
         color: #D3D3D3;
+    }
 
-          }
-
-body {
+    body {
         margin: 0 auto;
         justify-content: center;
         align-items: center;
     }
 
-.section-1 {
-        padding: 70px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "sub-container-s1-c2 sub-container-s1-c1";
-}
-
-.section-2 {  
+    .section-1 {
         padding: 70px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas:
-        "sub-container-s2-c1 sub-container-s2-c3"
-        "sub-container-s2-c2 sub-container-s2-c3";
-}
+            "sub-container-s1-c2 sub-container-s1-c1";
+    }
 
-.section-3 {
+    .section-2 {
         padding: 70px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas:
-        "sub-container-s3-c1 sub-container-s3-c2"
-}
+            "sub-container-s2-c1 sub-container-s2-c3"
+            "sub-container-s2-c2 sub-container-s2-c3";
+    }
 
-footer {
+    .section-3 {
+        padding: 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+            "sub-container-s3-c1 sub-container-s3-c2"
+    }
+
+    footer {
+        padding: 70px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas:
-        "footer-s1 footer-s2 footer-s3"
-}
+            "footer-s1 footer-s2 footer-s3"
+    }
 
-.sub-container-s1-c1 {
+    .sub-container-s1-c1 {
         grid-area: sub-container-s1-c1;
-}
+    }
 
-.sub-container-s1-c2 {
+    .sub-container-s1-c2 {
         grid-area: sub-container-s1-c2;
-}
-.sub-container-s2-c1 {
-        grid-area: sub-container-s2-c1;
-}
-.sub-container-s2-c2 {
-        grid-area: sub-container-s2-c2;
-}
-.sub-container-s2-c3 {
-        grid-area: sub-container-s2-c3;
-}
-.sub-container-s3-c1 {
-        grid-area: sub-container-s3-c1;
-}
-.sub-container-s3-c2 {
-        grid-area: sub-container-s3-c2;
-}
-.footer-s1 {
-        grid-area: footer-s1;
-}
-.footer-s2 {
-        grid-area: footer-s2;
-}
-.footer-s3 {
-        grid-area: footer-s3;
-}
+    }
 
-#image-curve-desktop {
+    .sub-container-s2-c1 {
+        grid-area: sub-container-s2-c1;
+    }
+
+    .sub-container-s2-c2 {
+        grid-area: sub-container-s2-c2;
+        max-width: 375px;
+    }
+
+    .sub-container-s2-c3 {
+        grid-area: sub-container-s2-c3;
+    }
+
+    .sub-container-s3-c1 {
+        grid-area: sub-container-s3-c1;
+    }
+
+    .sub-container-s3-c2 {
+        grid-area: sub-container-s3-c2;
+    }
+
+    .footer-s1 {
+        grid-area: footer-s1;
+    }
+
+    .footer-s2 {
+        grid-area: footer-s2;
+    }
+
+    .footer-s3 {
+        grid-area: footer-s3;
+    }
+
+    #image-curve-desktop {
         display: block;
         width: 100%;
-}
+    }
 
-#image-curve-mobile {
+    #image-curve-mobile {
         display: none;
-}
+    }
+
+    .buttons button {
+        border: none;
+        padding: 10px 20px;
+    }
 
 }
