--- a/Proyecto-1/entrega.css
+++ b/Proyecto-1/entrega.css
@@ -15,8 +15,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Barlow Semi Condensed", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: 80;
+    line-height: 1.7;
+
 }
 
 .nav-bar {
@@ -38,22 +40,19 @@
     align-items: center;
 }
 
-.buttons {
-    display: flex;
-    justify-self: end;
-    gap: 10px;
-}
-
 .nav-links button {
     background-color: white;
     width: 50px;
     gap: 20px;
+    font-family: "Raleway", system-ui;
 }
 
 .nav-links a {
     font-size: 9px;
     text-decoration: none;
     color: rgb(69, 69, 69);
+    font-family: "Raleway", system-ui;
+    font-weight: normal;
 }
 
 .section-1 {
@@ -93,12 +92,19 @@ button {
     margin: 5px;
     width: 300px;
 }
+button a  {
+    text-decoration: none;
+    color: white;
+    font-family: "Raleway", system-ui;
+    font-weight: bold;
+}
 
 h1 {
     color: var(--Very-Dark-Blue);
     font-size: 25px;
     padding: 10px;
     font-weight: bold;
+    font-family: "Raleway", system-ui;
 }
 
 .section-3-h1 {
@@ -207,6 +213,15 @@ footer span {
     padding: 2px 10px;
 }
 
+.email-box, .email-box-2 {
+    font-size: 12px;
+    height: 35px;
+    border-style: solid;
+    border-color: rgb(154, 153, 153);
+    border-width: 1px;
+    font-family: "Raleway", system-ui;;
+}
+
 @media screen and (min-width: 375px) {
     .nav-bar {
         max-width: none;
@@ -229,12 +244,19 @@ footer span {
         margin: 5px;
     }
 
-    .email-box {
+    .email-box-2 {
         display: block;
         width: 300px;
         margin: 5px;
         color: #D3D3D3;
     }
+
+    .email-box {
+        width: 300px;
+        margin: 5px;
+    }
+
+    
 
     body {
         margin: 0 auto;
